--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/dragoon/python-binance.git#egg=binance
+git+https://github.com/dragoon/python-binance.git#egg=python-binance
 pymongo==4.6.1
 environs
